Fix: Overflow bug

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -62,6 +62,7 @@
     /* Flip Style */
     background-color: transparent;
     perspective: 1000px;
+
 }
 
 .inner-card {
@@ -240,8 +241,6 @@
 }
 
 @media(min-width: 426px) {
-    .services {
-    }
 
     .services-cont {
         padding: 0;
